--- a/options/options.html
+++ b/options/options.html
@@ -52,7 +52,7 @@
             <input type="number" id="proxyPort" placeholder="例如: 8080">
           </div>
           
-          <div class="form-group">
+<!--      <div class="form-group">
             <div class="checkbox-container">
               <input type="checkbox" id="proxyAuth">
               <label for="proxyAuth">需要认证</label>
@@ -77,7 +77,8 @@
               <label for="password">密码</label>
               <input type="password" id="password" placeholder="输入密码">
             </div>
-          </div>
+          </div> 
+-->
           
           <div class="form-actions">
             <button id="saveProxyBtn">保存</button>
