--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>KProxy</title>
   <link rel="stylesheet" href="popup.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="container">
@@ -16,7 +17,10 @@
     <div class="actions">
       <button id="manageProxiesBtn" class="manage-btn">管理代理</button>
     </div>
-  
+    
+    <div class="footer">
+      <span>KProxy v1.0.0</span>
+    </div>
   </div>
   
   <script src="popup.js"></script>
